2005-09-02  Alexander Dupuy  <alex.dupuy@counterstorm.com>

	* README.i18n: gcc-4 puts "const struct poptOption optionsTable[]"
	in read-only code segment - hey - it's declared const, after all, and
	this gets a SEGV when we localize one of the string pointers in it.
	Don't declare it const, here, or in any of the umpteen dozen main()
	functions that were cut&pasted from this

	* include/libbk.h (BK_ENTRY_VOLATILE): BK_ENTRY_VOLATILE is
	occasionally needed to prevent compiler warnings (errors) about
	__bk_funinfo being clobbered by longjmp or vfork (or pthread_create).
	<TRICKY>A special macro is needed because the __bk_funinfo pointer
	variable *itself* (not the struct bk_funinfo it points to) must be
	declared volatile - use cdecl to "explain" the crazy C syntax for this.

	Seth had been using a "stupid" hack to force gcc to keep the variable
	on the stack, but the gcc-4 optimizer is too smart and optimizes the
	hack away, so we must use the volatile declaration correctly.</TRICKY>

	* lib/b_thread.c (bk_thread_create, bk_thread_kill_others): use it

2005-03-17  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_string.c (bk_string_tokenize_split): Allow for user
	defined braces which act like nesting quotes.

2005-02-15  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_time.c (bk_time_iso_format): Failure diagnostic and core
	dump avoidence.

2005-02-07  Brian Lindauer  <jbl@localhost.localdomain>

	* lib/b_ringdir.c (bk_ringdir_init): Update checkpoint file at startup.

2005-01-20  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_run.c (bk_run_once): Protect against the generally
	unwanted situatio of deadlock in select(2).

2005-01-18  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_process): Flag to allow child process
	to close stdin/stdout of not needed.

2005-01-10  James Tanis  <jtt@cheviot.sysdetect.com>

	* lib/b_intinfo.c (intinfo_ioctl_map): Properly terminate nvmap.

2004-12-23  Alexander Dupuy  <dupuy@sysdetect.com>
