@@ -1,3 +1,7 @@
+2006-02-02  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* lib/b_config.c (load_config_from_file): Allow infinite length configuration lines
+
 2005-09-02  Alexander Dupuy  <alex.dupuy@counterstorm.com>
 
 	* README.i18n: gcc-4 puts "const struct poptOption optionsTable[]"
